Implement sending of basic messages to the client

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
-  <script src="./script.js"></script>
+  <body>
+    <textarea id="message" cols="30" rows="10"></textarea>
+    <button id="send-button">send</button>
+    <script src="./script.js"></script>
+  </body>
 </html>
