--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <textarea id="message" cols="30" rows="10"></textarea>
+    <textarea id="input" cols="30" rows="10"></textarea>
     <button id="send-button">send</button>
+    <div id="chat"></div>
     <script src="./script.js"></script>
   </body>
 </html>
